--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,3 +31,4 @@ dependencies {
     compile 'id.gits:mvvmcore:0.1'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
